# sgx-runtime

./: Cargo.toml  README.md
.github/workflows/: build.yml
pallets/sgx-account-linker/: Cargo.toml
pallets/sgx-account-linker/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
sgx-account-linker/: Cargo.toml
substrate-sgx/externalities/: Cargo.toml
substrate-sgx/sp-io/: Cargo.toml
substrate-sgx/sp-io/src/: lib.rs
test-no-std/: Cargo.toml
